--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 .App {
   text-align: center;
 }
+
+.fs-lightbox-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 9999; /* Ensure it’s on top of other content */
+}
