--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
 
 @import 'leaflet/dist/leaflet.css';
 
+@import 'react-toastify/dist/ReactToastify.css';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
